desktop alignment fixes - removed hardcoded px

--- a/contactus.css
+++ b/contactus.css
@@ -45,16 +45,16 @@ input, textarea
     width: 100%;
     background-color: transparent;
     border: none;
-    border-bottom: 1px solid #757575;
+    border-bottom: 0.01vw solid #757575;
     padding: 1.5%;
-    font-size: 20px;
+    font-size: 2.5rem;
 }
 
 input:focus, textarea:focus
 {
     background-color: transparent;
     outline: transparent;
-    border-bottom: 2px solid rgb(255, 255, 255);
+    border-bottom: 0.05vw solid rgb(255, 255, 255);
 }
 
 input::placeholder, textarea::placeholder
@@ -69,6 +69,7 @@ label
     left: 0.5em;
     top: -2em;
 	cursor: auto;
+    font-size: 1.5rem;
     transition: 0.3s ease all;
 }
 
@@ -76,14 +77,14 @@ input:focus ~ label, input:not(:placeholder-shown) ~ label
 {
     top: -4em;
     color: rgb(255, 255, 255);
-    font-size: 15px;
+    font-size: 1rem;
 }
 
 textarea:focus ~ label, textarea:not(:placeholder-shown) ~ label
 {
     top: -10.5em;
     color: rgb(255, 255, 255);
-    font-size: 15px;
+    font-size: 1rem;
 }
 
 .button-div
@@ -98,12 +99,12 @@ button
     margin-inline: auto;
 	color: black;
 	text-decoration: none;
-	border: 1px solid #f1f1f1;
+	border: 0.01vw solid #f1f1f1;
 	/* padding: 0.35em 3em; */
-	padding-block: 0.35em;
+	padding-block: 1rem;
 	border-radius: 2em;
-    font-size: 1.1rem;
-	width: 200px;
+    font-size: 1.5rem;
+	width: 20vh;
 	font-weight: 400;
 
 }
